include/mps/mps.h

  typedef enum
  { false = 0, true = 1 } mps_boolean;
  /* Small workaround to make matlab module work; there is,
   * int matlab headers, already a false keyword defined, so
   * reusing it here make compilation fail. */
  typedef bool mps_boolean;
  /* secular.h */
  struct mps_secular_equation;
  /* monomial-poly.h */
  struct mps_monomial_poly;
  /* secular.h */
  typedef struct mps_secular_equation mps_secular_equation;
  /* monomial-poly.h */
  typedef struct mps_monomial_poly mps_monomial_poly;
  typedef enum mps_algorithm mps_algorithm;
  typedef enum mps_structure mps_structure;
  typedef enum mps_output_goal mps_output_goal;
  /**
   * @brief Algorithm used to find the solution of the polynomial,
   * or of the secular equation.
   */
  enum  mps_algorithm
    {
      /**
       * @brief Standard MPsolve approach
       */
      MPS_ALGORITHM_STANDARD_MPSOLVE,

      /**
       * @brief Standard MPSolve approach applied to
       * secular equations.
       */
      MPS_ALGORITHM_SECULAR_MPSOLVE,

      /**
       * @brief Gemignani's approach applied to secular equations.
       */
      MPS_ALGORITHM_SECULAR_GA
    };
  /**
   * @brief Definition of various algebraic structure that
   * MPSolve can use as input.
   *
   * Precisely, integer, rational and floating point, either real or
   * complex, can be treated in input.
   */
  enum mps_structure
    {
      MPS_STRUCTURE_REAL_INTEGER,
      MPS_STRUCTURE_REAL_RATIONAL,
      MPS_STRUCTURE_REAL_FP,
      MPS_STRUCTURE_REAL_BIGFLOAT,
      MPS_STRUCTURE_COMPLEX_INTEGER,
      MPS_STRUCTURE_COMPLEX_RATIONAL,
      MPS_STRUCTURE_COMPLEX_FP,
      MPS_STRUCTURE_COMPLEX_BIGFLOAT,
      MPS_STRUCTURE_UNKNOWN
    };
  /**
   * @brief Goal to reach before returning the result.
   */
  enum mps_output_goal {
    MPS_OUTPUT_GOAL_ISOLATE,
    MPS_OUTPUT_GOAL_APPROXIMATE,
    MPS_OUTPUT_GOAL_COUNT
  };